# rexglue-sdk

./: .gitmodules  CMakeLists.txt  README.md  Rebuild.bat
.github/workflows/: build-linux-aarch64.yaml  build-linux-amd64.yaml  build-win-amd64.yaml
cmake/: rexglue_fidelityfx.cmake  rexglue_helpers.cmake  rexglue_install.cmake
include/rex/: cvar.h  dbg.h  discord_rpc.h  hook.h  platform.h  ppc.h  rex_app.h  runtime.h  string.h
include/rex/codegen/: config.h  manifest.h  progress_reporter.h
include/rex/filesystem/: device.h  entry.h
include/rex/graphics/: command_processor.h  shared_memory.h
src/codegen/: builders.h  codegen.cpp  codegen_context.cpp  codegen_writer.cpp  config.cpp  discovery.cpp  instruction_dispatch.cpp  manifest.cpp  output.cpp  project_recompiler.cpp
src/core/: CMakeLists.txt  cvar.cpp  dynlib_posix.cpp  dynlib_win.cpp  exception_handler_win.cpp  filesystem_posix.cpp  filesystem_win.cpp  injection_guard_win.cpp  logging.cpp  string_posix.cpp  string_win.cpp  threading_posix.cpp  timer_queue.cpp
src/discord/: CMakeLists.txt  discord_rpc.cpp
src/filesystem/: entry.cpp
src/graphics/: CMakeLists.txt  command_processor.cpp  trace_viewer.cpp  trace_writer.cpp
src/input/: input_system.cpp
src/kernel/: CMakeLists.txt
src/rexglue/: main.cpp
src/system/: CMakeLists.txt  kernel_state.cpp  runtime.cpp  user_module.cpp  xex_module.cpp  xfile.cpp  xmemory.cpp  xthread.cpp
src/ui/: CMakeLists.txt  imgui_drawer.cpp  keybinds.cpp  presenter.cpp  rex_app.cpp  window_win.cpp  windowed_app_main_posix.cpp
tests/unit/: CMakeLists.txt
(+79 files in other folders)
